# circle-stitcher

./: .cookiecutter.json  .cruft.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/circle_stitcher/: __init__.py  __main__.py  parser.py
tests/: __init__.py  test_main.py
